Changed to use the correct MessagingSettings resource, removed redundant employee integration.